[gd_scene load_steps=4 format=2]

[ext_resource path="res://redesign/scenes/MenuBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://redesign/scenes/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://redesign/scripts/LevelSelectMenu.gd" type="Script" id=3]

[node name="LevelSelectMenuBox" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MenuButtons" parent="ScrollContainer" index="0"]
margin_bottom = 245.0

[node name="StreetsButton" parent="ScrollContainer/MenuButtons" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 674.0
text = "Streets"

[node name="WarehouseButton" parent="ScrollContainer/MenuButtons" index="1" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 51.0
margin_right = 674.0
margin_bottom = 92.0
text = "Warehouse"

[node name="ApartmentButton" parent="ScrollContainer/MenuButtons" index="2" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 102.0
margin_right = 674.0
margin_bottom = 143.0
text = "Apartment"

[node name="ClubButton" parent="ScrollContainer/MenuButtons" index="3" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 153.0
margin_right = 674.0
margin_bottom = 194.0
text = "Club"

[node name="TowerButton" parent="ScrollContainer/MenuButtons" index="4" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 204.0
margin_right = 674.0
margin_bottom = 245.0
text = "Tower"

[connection signal="pressed" from="ScrollContainer/MenuButtons/StreetsButton" to="." method="_on_StreetsButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuButtons/WarehouseButton" to="." method="_on_WarehouseButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuButtons/ApartmentButton" to="." method="_on_ApartmentButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuButtons/ClubButton" to="." method="_on_ClubButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuButtons/TowerButton" to="." method="_on_TowerButton_pressed"]
